--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "laravel-resource-pagination-type",
   "version": "1.0.1",
   "description": "TypeScript type definitions for Laravel resource pagination",
+  "main" : "",
   "types": "index.d.ts",
   "files": [
     "index.d.ts"
