--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "laravel-resource-pagination-type",
   "version": "1.0.3",
   "description": "TypeScript type definitions for Laravel resource pagination",
-  "main": "",
+  "main": "index.js",
   "types": "index.d.ts",
   "files": [
     "index.d.ts"
